--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,13 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        maven { url 'https://jitpack.io' }
     }
 }
 allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -29,3 +29,7 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+wrapper {
+    gradleVersion = "7.4.2"
+    distributionType = Wrapper.DistributionType.ALL
+}
