--- a/library.gradle
+++ b/library.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'maven-publish'
+apply plugin: 'org.jetbrains.dokka'
 
 android {
     compileSdkVersion project.properties.sdk_version
@@ -47,4 +48,3 @@ task sourceJar(type: Jar) {
     classifier 'sources'
     from android.sourceSets.main.java.srcDirs
 }
-
