--- a/library.gradle
+++ b/library.gradle
@@ -48,3 +48,11 @@ task sourceJar(type: Jar) {
     classifier 'sources'
     from android.sourceSets.main.java.srcDirs
 }
+dokkaHtml {
+    outputDirectory = file("${projectDir}/../docs")
+    dokkaSourceSets {
+        configureEach {
+            includes.from("../README.md")
+        }
+    }
+}
