--- a/renetik_android_build_common.gradle
+++ b/renetik_android_build_common.gradle
@@ -14,6 +14,7 @@ buildscript {
         junit_version = '4.13.2'
         play_version = '18.0.1'
         kotlin_version = '1.7.0'
+        is_renetik_library_release = project.properties["renetik_library_release"] == "true"
     }
     configurations.all {
         resolutionStrategy.cacheDynamicVersionsFor 0, 'minutes'
@@ -28,10 +29,6 @@ allprojects {
         maven { url 'https://github.com/renetik/maven-snapshot/raw/master/repository' }
         maven { url 'https://github.com/renetik/maven/raw/master/repository' }
     }
-}
-configurations.all {
-    resolutionStrategy.cacheDynamicVersionsFor 0, 'minutes'
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
