--- a/library.gradle
+++ b/library.gradle
@@ -10,6 +10,9 @@ android {
         targetSdkVersion project.properties.sdk_version
     }
     testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
         unitTests.all {
             testLogging {
                 outputs.upToDateWhen { false }
