--- a/library.gradle
+++ b/library.gradle
@@ -43,7 +43,7 @@ afterEvaluate {
                 groupId 'com.renetik.library'
                 artifactId project.name
                 artifact sourceJar
-                version = project.renetik_android_version
+                version = project.renetik_library_version
             }
         }
     }
